2002-07-07  Derek Atkins  <derek@ihtfp.com>

	* options.scm: change gnc:make-option; add two new args, scm->kvp
	  and kvp->scp.  Implement these two methods for most of the options.
	* app-utils.scm: export the kvp->scm and scm->kvp procedures
	* business-options.scm: Implement the kvp->scm and scm->kvp methods
	  for the business options.

2002-07-06  Derek Atkins  <derek@ihtfp.com>

	* gw-kvp-spec.scm: wrap kvp_slot_set_slot_path_gslist(),
	  kvp_slot_get_slot_path_gslist(), and gnc_book_get_slots()

	* kvp-scm: create gnc_kvp_frame_delete_at_path() and wrap it.
	  This function will clear a sub-tree out of a kvp_frame.	  

	* kvp-scm: implement KVP_TYPE_FRAME kvp-values

	* gw-engine-spec.scm: wrap gnc_session_get_url(), in preparation
	  for changing the book-opened-hook and book-closed-hook
	  prototypes.
	
2002-07-05  Derek Atkins  <derek@ihtfp.com>

	* gw-engine-spec.scm: wrap gnc_lot_get_split_list
	* gw-business-core-spec.scm: wrap gncInvoiceGetPosted{Acc,Txn,Lot}

	* invoice.scm: add the ability to show the payments applied to
	  the invoice
	
2002-07-04  Derek Atkins  <derek@ihtfp.com>

	* option-util.c: add gnc_option_get_option_data() function
	* dialog-options: publish gnc_options_dialog_changed_internal() so
	  pluggible options can set the flag, too.

	* business-options: (new files) implement owner/customer/vendor
	  options to plug into the options dialog.
	* businessmod-gnome: initialize business options
	* business-utils: pack into box FALSE, not TRUE
	* owner-report: put the company into the options dialog instead of
	  hiding it.

	* business-core.scm: fix a typo
	* business-options.c: implement invoice option for the dialog
	* gncEntryLedgerLoad.c: fix a compiler warning
	* invoice.scm: make report visible; deal with no invoice; make
	  invoice a visible option on the general page; deal with "printing"
	  un-posted invoices.
	* receivables.scm: remove code I don't need
	
2002-07-03  Derek Atkins  <derek@ihtfp.com>
